# rune

./: .gitignore  Cargo.toml  README.md  TODO.txt
examples/: constprop.asm  converter.rs  simple_mistake.c  simple_solver.rs  smt_example.rs
runec/: console.rs  interact.rs  main.rs
spec/: BV.md
src/: bv.rs  context.rs  engine.rs  explorer.rs  ir.rs  lib.rs
src/constructor/: path_constructor.rs  smt_constructor.rs
src/context/: bv.rs  context.rs  context_.rs  rcontext.rs  rune_ctx.rs  ssa_ctx.rs  structs.rs  utils.rs
src/engine/: engine.rs  rune.rs
src/explorer/: bfs.rs  command.rs  dfs.rs  directed_explorer.rs  explorer.rs  interactive.rs
src/memory/: qword_mem.rs  seg_mem.rs
src/smt/: bitvec.rs  core.rs  integer.rs  mod.rs  smt.rs  ssmt.rs
src/smt/logics/: qf_abv.rs  qf_aufbv.rs  qf_bv.rs  utils.rs
src/smt/theories/: array_ex.rs  bitvec.rs  core.rs  integer.rs  real.rs  real_ints.rs  utils.rs
src/stream/: mod.rs
src/utils/: state.rs  utils.rs
test_files/: crackme  crackme-nopie-macho  crackme2  newcrackme  test
